src-ken&y/objects/Shipping_Method__c.object
<CustomObject>
    <customHelpPage>HelpShippingMethods</customHelpPage>
    <description>Various shipping methods to use on the Shipment &amp; Sales Order objects.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account number with the shipper for this shipping method</description>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Shipping Methods</relationshipLabel>
        <relationshipName>Shipping_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of this shipping method</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>2 Day</fullName>
                </value>
                <value>
                    <fullName>3Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Method_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>Shipping Method Unique</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to supplier</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Shipping Methods</relationshipLabel>
        <relationshipName>Shipping_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shipping Method</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Description__c</columns>
        <columns>Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipping Method</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>